package com.practica3;
/**
 * Enumeración Género implementada para cumplir la funcionalidad especificada en la
 * Práctica 3 de ADSOF
 * @author Rafael Sánchez Sánchez y Sergio Galán Martín: rafael.sanchez@estudiante.uam.es y sergio.galanm@estudiante.uam.es
 *
 */
public enum Genero{
    ACCION,
    BELICA,
    WESTERN,
    THRILLER,
    TERROR,
    SUSPENSE,
    POLICIAL,
    MUSICAL,
    COMEDIA,
    CIENCIAFICCION,
    DOCUMENTAL;
}
